--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <!-- Include the script that builds the page and powers Sveltia CMS -->
-    <script
+    <!-- <script
       src="https://unpkg.com/@sveltia/cms/dist/sveltia-cms.js"
       type="module"
-    ></script>
-    <!-- <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script> -->
+    ></script> -->
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </body>
 </html>
